--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,6 @@ name: Python CI Pipeline
 
 on:
   push:
-    branches: [master, main]
   pull_request:
     branches: [master, main]
 
@@ -24,13 +23,22 @@ jobs:
           python -m pip install --upgrade pip  # Upgrade pip to the latest version
           pip install setuptools wheel
           pip install -r requirements.txt  # Install dependencies from requirements.txt
-          pip install pylint pytest
+          pip install pylint pytest black
 
       - name: Run Tests
         run: |
           python -m pytest tests/
+      
+      - name: Run Linter
+        run: |
+          pylint .
+      
+      - name: Run Code Formatting with Black
+        run: |
+          black --check .   # Check the format of entire repo
 
       - name: Print Success Message
+        if: success()
         run: |
           echo "CI Pipeline completed successfully!"
           echo "========================"
@@ -39,4 +47,5 @@ jobs:
           echo "✓ Dependencies installed"
           echo "✓ Tests executed"
           echo "✓ Linting completed"
+          echo "✓ Formatting checked"
           echo "========================"
