--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       
       - name: Run Linter
         run: |
-          pylint .
+          pylint app tests
       
       - name: Run Code Formatting with Black
         run: |
