--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [master, main]
+    branches: [master, main, dev]
   pull_request:
     branches: [master, main]
 
