--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Python CI Pipeline
 
 on:
     push:
-        branches: [ dev ]
+        branches: [ master, main, dev ]
 
     pull_request:
         branches: [ master, main ]
@@ -20,7 +20,7 @@ jobs:
                 with:
                     python-version: "3.11"
 
-            -   name: Hadolint Action
+            -   name: Hadolint Action Check Dockerfile Syntax
                 uses: hadolint/hadolint-action@v3.1.0
                 with:
                     dockerfile: ./Dockerfile
