--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
 
             -   name: Run Docker container
                 run: |
-                        docker run -d -p 8000:8000 common-assessment-tool
+                        docker docker run -d --name common-assessment-container -p 8000:8000 common-assessment-tool
                         sleep 10  
 
             -   name: Test Docker container
@@ -66,7 +66,7 @@ jobs:
                     }
 
             - name: Stop Docker container
-              run: docker stop common-assessment-tool
+              run: docker stop common-assessment-container
 
             -   name: Print Success Message
                 if: success()
