Put CD steps back into ci file and rename so only use one file

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,9 +39,9 @@ jobs:
 
       - name: Run Docker container
         run: |
-          docker compose up -d
+          docker run -d -p 8000:8000 common-assessment-tool
           sleep 10  # Wait for container to start
 
       - name: Test Docker container
         run: |
-          http://ec2-54-165-172-227.compute-1.amazonaws.com:8000/docs
+          curl http://localhost:8000/docs
