--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-SECRET_KEY = "your-secret-key-here"
+AWS_ACCESS_KEY_ID = "<your-aws-access-key-id-here>"
+EC2_INSTANCE_UP = "<your-ec2-instance-up-here>"
+EC2_INSTANCE_IP = "<your-ec2-instance-ip-here>"
+EC2_USER = "<your-ec2-user-here>"
+SECRET_KEY = "<your-secret-key-here>"
 ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
