Update env with secret access key field

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ AWS_ACCESS_KEY_ID = "<your-aws-access-key-id-here>"
 EC2_INSTANCE_UP = "<your-ec2-instance-up-here>"
 EC2_INSTANCE_IP = "<your-ec2-instance-ip-here>"
 EC2_USER = "<your-ec2-user-here>"
+SECRET_ACCESS_KEY = "<your-secret-access-key-here>"
 SECRET_KEY = "<your-secret-key-here>"
 ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 30
