--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - id: deploy
-        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.2
+        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.2  # https://github.com/marketplace/actions/deploy-docker-to-aws-ec2
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
