--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,5 +16,5 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_default_region: us-east-1
+          aws_default_region: us-west-2
           aws_elb_app_port: 8000
