--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,15 +6,37 @@ on:
   pull_request:
     branches: [master, main]
 
+# Source for how this was set up
+# https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - id: deploy
-        uses: bitovi/github-actions-deploy-docker-to-ec2@v1.0.2  # https://github.com/marketplace/actions/deploy-docker-to-aws-ec2
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_default_region: us-east-1
-          aws_elb_app_port: 8000
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+    - name: Build and push Docker image
+      run: |
+        docker build -t common_assessment_tool .
+        docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+
+    - name: Install SSH Key
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Deploy Docker image to EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
+        docker pull ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+        docker stop $(docker ps -a -q) || true
+        docker run -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+        EOF
