--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,8 +16,9 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Debug Secret Value Length
-      run: printf "%s" "${{ secrets.EC2_KEY }}" | grep -c '^'
+    - name: Debug PEM Key Line Count
+      run: |
+        printf "%s" "${{ secrets.EC2_KEY }}" | grep -c '^'
 
     - name: Login to DockerHub
       run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
