--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,37 +6,32 @@ on:
   pull_request:
     branches: [master, main]
 
-# Source for how this was set up test
+# Source for how this was set up
 # https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Debug PEM Key Line Count
-      run: |
-        printf "%s" "${{ secrets.SSH_PRIVATE_KEY }}" | grep -c '^'
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-    - name: Login to DockerHub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+      - name: Build and push Docker image
+        run: |
+          docker build -t common_assessment_tool .
+          docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+      - name: Install SSH Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t common_assessment_tool .
-        docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
-
-    - name: SSH and update EC2 container
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: |
+      - name: Deploy Docker image to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
-          docker stop common_assessment_tool || true
-          docker rm common_assessment_tool || true
-          docker run -d --name common_assessment_tool_container -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+          docker stop $(docker ps -a -q) || true
+          docker
