--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -91,12 +91,15 @@ jobs:
           - name: Checkout repository
             uses: actions/checkout@v2
 
-          - name: Login to DockerHub
-            run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
           - name: Build Docker image
             run: |
               docker build -t common_assessment_tool .
+
+          - name: Push image to Docker Hub
+            run: |
+              echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+              docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+              docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
 
           - name: Install SSH Key
             uses: webfactory/ssh-agent@v0.9.1
@@ -106,6 +109,7 @@ jobs:
           - name: Deploy Docker image to EC2 instance
             run: |
               ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
+              docker pull ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               docker stop $(docker ps -a -q) || true
-              docker run -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+              docker run --rm -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               EOF
