--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -84,20 +84,19 @@ jobs:
     # Source for how this was set up
     # https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
     deploy:
-        #needs: test # This ensures deploy only runs if tests pass
+        needs: test # This ensures deploy only runs if tests pass
         runs-on: ubuntu-latest
 
         steps:
           - name: Checkout repository
             uses: actions/checkout@v2
 
-          - name: Build Docker image
+          - name: Login to DockerHub
+            run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+          - name: Build and push Docker image
             run: |
               docker build -t common_assessment_tool .
-
-          - name: Push image to Docker Hub
-            run: |
-              echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
               docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
 
@@ -106,10 +105,10 @@ jobs:
             with:
               ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-          - name: Deploy Docker image to EC2 instance
+          - name: Deploy Docker image to EC2
             run: |
               ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
               docker pull ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               docker stop $(docker ps -a -q) || true
-              docker run --rm -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
+              docker run -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               EOF
