--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -8,7 +8,56 @@ on:
         branches: [ master, main ]
 
 jobs:
-    test:
+    test_code_formatting:
+          runs-on: ubuntu-latest # Use the latest Ubuntu runner
+
+          steps:
+              -   name: Checkout Code
+                  uses: actions/checkout@v4 # Checkout the repository
+
+              -   name: Set up Python
+                  uses: actions/setup-python@v5 # Set up Python environment
+                  with:
+                      python-version: "3.11"
+
+              -   name: Install dependencies
+                  run: |
+                      python -m pip install --upgrade pip  # Upgrade pip to the latest version
+                      pip install setuptools wheel
+                      pip install -r requirements.txt  # Install dependencies from requirements.txt
+                      pip install pylint pytest black isort
+
+              -   name: Run Code Formatting with Black # Format the entire repo
+                  run: |
+                      black .
+
+              -   name: Run Code Formatting with isort
+                  run: |
+                      isort .
+
+              -   name: Run Linter
+                  run: |
+                      pylint ./app ./tests
+
+              -   name: Run Tests
+                  run: |
+                      python -m pytest tests/ 
+
+              -   name: Print Success Message
+                  if: success()
+                  run: |
+                      echo "Confirmed code formatting and functionality successfully!"
+                      echo "========================"
+                      echo "✓ Code checked out"
+                      echo "✓ Python environment set up"
+                      echo "✓ Dependencies installed"
+                      echo "✓ Code formatting checked with Black"
+                      echo "✓ Code formatting checked with isort"
+                      echo "✓ Linting completed"
+                      echo "✓ Tests completed"
+                      echo "========================"
+
+    test_docker_setup:
         runs-on: ubuntu-latest # Use the latest Ubuntu runner
 
         steps:
@@ -31,22 +80,6 @@ jobs:
                     pip install setuptools wheel
                     pip install -r requirements.txt  # Install dependencies from requirements.txt
                     pip install pylint pytest black isort
-
-            -   name: Run Code Formatting with Black # Format the entire repo
-                run: |
-                    black .
-
-            -   name: Run Code Formatting with isort
-                run: |
-                    isort .
-
-            -   name: Run Linter
-                run: |
-                    pylint ./app ./tests
-
-            -   name: Run Tests
-                run: |
-                    python -m pytest tests/ 
 
             -   name: Build Docker Image
                 run: |
@@ -71,32 +104,33 @@ jobs:
             -   name: Print Success Message
                 if: success()
                 run: |
-                    echo "CI Pipeline completed successfully!"
+                    echo "Confirmed Docker image can be built and run successfully!"
                     echo "========================"
                     echo "✓ Code checked out"
                     echo "✓ Python environment set up"
+                    echo "✓ Docker file syntax checked"
                     echo "✓ Dependencies installed"
-                    echo "✓ Tests executed"
-                    echo "✓ Linting completed"
-                    echo "✓ Formatting checked"
+                    echo "✓ Docker container built"
+                    echo "✓ Docker container run"
+                    echo "✓ Docker container tested with good health"
+                    echo "✓ Docker container stopped"
                     echo "========================"
 
     # Source for how this was set up
     # https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
     deploy:
-        needs: test # This ensures deploy only runs if tests pass
+        needs: [test_docker_setup, test_code_formatting] # This ensures deploy only runs if tests pass
         runs-on: ubuntu-latest
 
         steps:
           - name: Checkout repository
-            uses: actions/checkout@v2
+            uses: actions/checkout@v4
 
-          - name: Login to DockerHub
-            run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          - name: Build Docker image
+            run: docker build -t common_assessment_tool .
 
-          - name: Build and push Docker image
-            run: |
-              docker build -t common_assessment_tool .
+          - name: Push image to Docker Hub
+              echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
               docker tag common_assessment_tool ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               docker push ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
 
@@ -112,3 +146,15 @@ jobs:
               docker stop $(docker ps -a -q) || true
               docker run -d -p 8000:8000 ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
               EOF
+
+          -   name: Print Success Message
+              if: success()
+              run: |
+                  echo "Deployed to EC2 successfully!"
+                  echo "========================"
+                  echo "✓ Code checked out"
+                  echo "✓ Docker image built"
+                  echo "✓ Docker image pushed to Docker Hub"
+                  echo "✓ SSH key for EC2 instance installed"
+                  echo "✓ Deployed Docker image to EC2"
+                  echo "========================"
