--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -18,68 +18,44 @@ jobs:
             -   name: Set up Python
                 uses: actions/setup-python@v5 # Set up Python environment
                 with:
-                    python-version: "3.11"
-
-            -   name: Hadolint Action Check Dockerfile Syntax
-                uses: hadolint/hadolint-action@v3.1.0
-                with:
-                    dockerfile: ./Dockerfile
+                  python-version: "3.11"
 
             -   name: Install dependencies
                 run: |
-                    python -m pip install --upgrade pip  # Upgrade pip to the latest version
-                    pip install setuptools wheel
-                    pip install -r requirements.txt  # Install dependencies from requirements.txt
-                    pip install pylint pytest black isort
+                  python -m pip install --upgrade pip  # Upgrade pip to the latest version
+                  pip install setuptools wheel
+                  pip install -r requirements.txt  # Install dependencies from requirements.txt
+                  pip install pylint pytest black isort
 
             -   name: Run Code Formatting with Black # Format the entire repo
                 run: |
-                    black .
+                  black .
 
             -   name: Run Code Formatting with isort
                 run: |
-                    isort .
+                  isort .
 
             -   name: Run Linter
                 run: |
-                    pylint ./app ./tests
+                  pylint ./app ./tests
 
             -   name: Run Tests
                 run: |
-                    python -m pytest tests/ 
-
-            -   name: Build Docker Image
-                run: |
-                    docker build -t common-assessment-tool .
-
-            -   name: Run Docker container
-                run: |
-                        docker run -d --name common-assessment-container -p 8000:8000 common-assessment-tool
-                        sleep 10  
-
-            -   name: Test Docker container
-                run: |
-                    curl --fail http://localhost:8000/docs || {
-                        echo "Health check failed"
-                        docker logs common-assessment-tool
-                        exit 1
-                    }
-
-            - name: Stop Docker container
-              run: docker stop common-assessment-container
+                  python -m pytest tests/ 
 
             -   name: Print Success Message
                 if: success()
                 run: |
-                    echo "CI Pipeline completed successfully!"
-                    echo "========================"
-                    echo "✓ Code checked out"
-                    echo "✓ Python environment set up"
-                    echo "✓ Dependencies installed"
-                    echo "✓ Tests executed"
-                    echo "✓ Linting completed"
-                    echo "✓ Formatting checked"
-                    echo "========================"
+                  echo "Confirmed code formatting and functionality successfully!"
+                  echo "========================"
+                  echo "✓ Code checked out"
+                  echo "✓ Python environment set up"
+                  echo "✓ Dependencies installed"
+                  echo "✓ Code formatting checked with Black"
+                  echo "✓ Code formatting checked with isort"
+                  echo "✓ Linting completed"
+                  echo "✓ Tests completed"
+                  echo "========================"
 
     # Source for how this was set up
     # https://dev.to/s3cloudhub/automate-docker-deployments-push-your-images-to-ec2-with-github-actions-3a3j
