--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ name: CI-CD Pipeline
 
 on:
     push:
-        branches: [ master, main, dev ]
+        branches: [ master, main, dev, test2 ]
 
     pull_request:
         branches: [ master, main ]
