--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -139,6 +139,15 @@ jobs:
             -   name: Deploy Docker image to EC2
                 run: |
                     ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
+                    # Install Docker if not already installed
+                    sudo dnf update -y
+                    sudo dnf install -y docker
+                    sudo systemctl enable docker
+                    sudo systemctl start docker
+                    sudo usermod -aG docker $USER
+                    newgrp docker
+                    
+                    # Deploy container
                     docker pull ${{ secrets.DOCKERHUB_USERNAME }}/common_assessment_tool:latest
                     docker stop $(docker ps -a -q) || true
                     docker rm $(docker ps -a -q) || true
